# Ryzor

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
src/: cli.py  core.py  documentação_0.2.5.md  extensions.json  logger.py  t.py
src/data/: extensions.json
src/modules/: definer.py  file_manager.py  lister.py  lister_manager.py  logger.py  remover.py  repair_manager.py  utils.py
src/modules/data/: extensions.json
src/protected/: extensions_default.json
tests/: generator.py
