[project]
name = "ryzor"
version = "0.2.9"
description = "CLI para organização de arquivos"
authors = [{ name = "Lucas Paulino Da Silva", email = "lucas.workps@gmail.com" }]
dependencies = ["rich", "pyfiglet", "send2trash"]

[project.scripts]
ryzor = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"